--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 		<title>Document</title>
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<nav class="navbar">
+				<ul class="navbar__list">
+					<li class="navbar__item">
+						<a class="navbar__link" href="#"></a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+	</body>
 </html>
